css/app.css
body {
  font-size: 15px;
}

.serviceInfo {
  white-space: pre;
}

.todo .comments {
  margin-top: 0.5em;
  margin-bottom: 1em;
}

#protocol p.signature-place {
  margin-top: 5em;
}

#protocol p.signature-name {
  margin-top: 5em;
}

#protocol td span.connection-detail {
  font-size: 110%;
  font-weight: bold;
}

#protocol table.device tr td.device-name {
  border: 1px solid black;
  padding-left: 5px;
}

#protocol table.service-detail tr td.device-name {
  border: 1px solid black;
  padding-left: 5px;
}

#protocol table.device tr td.device-owner {
  text-align: center;
  margin: 0 10px 0 10px;
}

#protocol table.device tr td.devices-label {
  color: white;
}

#protocol table.device tr:first-child td.devices-label {
  color: black;
}

#protocol {
  font-family: "Times New Roman", Times, serif;
  font-size: 9.5pt;
  line-height: 160%;
}

#protocol img.pl.logo {
  width: 120px;
}

#protocol h1 {
  font-size: 130%;
  font-weight: bold;
  text-align: center;
}

#protocol table {
  width: 100%;
}

#protocol td.col-1 {
  width: 3%;
  font-weight: bold;
  vertical-align: top;
}

#protocol td.col-2 {
  width: 27%;
}

#protocol td.col-3 {
  width: 70%;
}

#protocol table.main-protocol {
  margin-top: 1em;
  margin-bottom: 1em;
}
#protocol td.bordered {
  border: 1px solid black;
  padding-left: 0.5em;
}

#protocol span.dotted-field {
  display: inline-block;
  width: 25%;
  border-bottom: 1px dotted black;
}
.issue-closed a {
  text-decoration: line-through;
}

.notifications {
  position: fixed;
  width: 30%;
  z-index: 9999;
}

.notifications.top-right {
  right: 10px;
  top: 25px;
}

.notifications.top-left {
  left: 10px;
  top: 25px;
}

.notifications.bottom-left {
  left: 10px;
  bottom: 25px;
}

.notifications.bottom-right {
  right: 10px;
  bottom: 25px;
}

/* Notification Element */
.notifications > div {
  position: relative;
  margin: 5px 0px;
}

.flashMessage > h5 {
  text-transform: uppercase;
}

.flashMessage {
  cursor: pointer;
}

.panel-heading h3 {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    line-height: normal;
    width: 50%;
    padding-top: 8px;
}

.col-md-worel {position: inherit;}

.panel-heading .btn {margin-left: 15px;}

tr.clickable:hover {
  color: blue;
  cursor: pointer;
}
.ds-none {display: none !important;}

.navbar {margin-bottom: 10px; min-height: 40px;}
.navbar-brand {height: 40px; padding: 10px 15px;}

.panel {margin-bottom: 10px;}

.panel.panel-tab {border-top: none ; border-top-right-radius:0; border-top-left-radius:0;}

.btn-group.service {margin-left: 10px;}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=number] {
  -moz-appearance: textfield;
}

.delete-confirm {
  position: absolute;
  display: none;
  left: 0;
  top: 0;
  color: #000;
  padding: 10px;
  text-align: center;
  max-width: 320px;
  width: 100%;
  background: #fff;
  border: 2px solid #ccc;
  border-radius: 6px;
  box-shadow: 0 5px 10px #ccc;
}
.delete-confirm:after, .delete-confirm:before {
  top: 100%;
  left: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}
.delete-confirm:after {
  border-color: rgba(255, 255, 255, 0);
  border-top-color: #fff;
  border-width: 18px;
  margin-left: -18px;
}
.delete-confirm:before {
  border-color: rgba(153, 153, 153, 0);
  border-top-color: #999;
  border-width: 21px;
  margin-left: -21px;
}
.delete-confirm .btn {margin: 0 5px;}

.form-control.err {border: 1px solid red; box-shadow: 0 0 8px rgba(255,0,0,0.6);}

.icon-isactive {font-size: 0; color: transparent; width: 14px; height: 14px; background: gray; border: none; outline: none; border-radius: 25px; box-shadow: 0 0 2px 2px gray;}
.icon-isactive[value="1"] {background: green; box-shadow: 0 0 2px 2px green;}
.icon-isactive[value="2"] {background: red; box-shadow: 0 0 2px 2px red;}

.tiny {
  font-size: 0.7em;
}

